We now have everything implemented using UVM

--- a/src/Makefile
+++ b/src/Makefile
@@ -1,23 +1,26 @@
 C_FLAGS = -std=c99 
 CXX_FLAGS = -g -std=c++11
-NVCC_FLAGS =  -g 
-LD_LIB_DIRS = -L/usr/local/cuda/lib
-LD_FLAGS = -lcuda -lcudart -lcurand 
+NVCC_FLAGS =  -gencode=arch=compute_30,code=sm_30 \
+              -gencode=arch=compute_32,code=sm_32  \
+              -gencode=arch=compute_35,code=compute_35 \
+              -g 
+LD_LIB_DIRS = -L/usr/local/cuda/lib64
+LD_FLAGS = -lcuda -lcudart -lcurand -lm
 LD_STATIC = 
-INCLUDE_DIRS = -I/usr/local/cuda/include -I/Users/mmath/Dropbox/Fun/Vecky/src/
+INCLUDE_DIRS = -I/usr/local/cuda/include -I../../Vecky/src/
 
-CXX = /usr/local/bin/g++-4.8
-CC = /usr/local/bin/gcc-4.8
-NVCC = /usr/local/cuda/bin/nvcc
-#CXX = g++
-#CC = gcc
-#NVCC = nvcc
+#CXX = /usr/local/bin/g++-4.8
+#CC = /usr/local/bin/gcc-4.8
+#NVCC = /usr/local/cuda/bin/nvcc
+CXX = g++
+CC = gcc
+NVCC = nvcc
 
 OUTPUT_DIR=./bin/
 
 CUDA_FILES = Renderer.cu \
              DistanceRenderer.cu \
-             SceneAllocator.cu \
+             Managed.cu \
              PhongRenderer.cu          
 
 CUDA_OBJS = $(CUDA_FILES:%.cu=%.o)
@@ -38,7 +41,7 @@ C_OBJS = $(C_FILES:%.c=%.o)
 PROGNAME=rayTracer
 
 all: $(CXX_OBJS) $(C_OBJS) $(CUDA_OBJS)
-	$(NVCC) $(NVCC_FLAGS) -dlink $(CUDA_OBJS) -o gpuCode.o
+	$(NVCC) $(NVCC_FLAGS) -dlink $(CUDA_OBJS) -o gpuCode.o 
 	$(CXX) $(CXX_FLAGS) gpuCode.o $(CUDA_OBJS) $(CXX_OBJS) $(C_OBJS) $(LD_LIB_DIRS) $(LD_FLAGS) -o $(PROGNAME) 
 
 %.o: %.cu
@@ -50,5 +53,5 @@ all: $(CXX_OBJS) $(C_OBJS) $(CUDA_OBJS)
 %.o:%.c 
 	$(CC) $(C_FLAGS) -c $(INCLUDE_DIRS) -c $<  -o $@
 
-clean: *.o
+clean: *.hpp *.cu *.cpp
 	rm *.o
