Major code refactor to clean up the some of the UVM junk and make adding new things easier

--- a/src/Makefile
+++ b/src/Makefile
@@ -29,6 +29,8 @@ CXX_FILES= main.cpp \
            ParseScene.cpp \
            ParsingException.cpp \
            SceneContainer.cpp \
+           GeometryBuilder.cpp \
+           MaterialBuilder.cpp \
            TriangleMesh.cpp
 
 CXX_OBJS = $(CXX_FILES:%.cpp=%.o)
